@@ -1,6 +1,5 @@
 machine_algor.cc  Algorithmic P4032 and P5064 evaluation boards
 machine_arc.cc  ARC (Advanced RISC Computing) machines
-machine_bebox.cc  BeBox
 machine_cats.cc  Simtec Electronics' CATS board
 machine_cobalt.cc  Cobalt (MIPS-based)
 machine_dreamcast.cc  SEGA Dreamcast
@@ -11,7 +10,6 @@ machine_hpcsh.cc  Handheld SuperH-based machines
 machine_iq80321.cc  Intel IQ80321 (ARM)
 machine_iyonix.cc  A Iyonix machine
 machine_landisk.cc  I-O DATA LanDisk USL-5P
-machine_luna88k.cc  LUNA88K machine
 machine_macppc.cc  Generic PowerPC-based Macintosh machines
 machine_mvme88k.cc  MVME88K machines (MVME187)
 machine_mvmeppc.cc  MVMEPPC machines
